--- a/app/src/main/res/drawable/its_border.xml
+++ b/app/src/main/res/drawable/its_border.xml
@@ -4,5 +4,8 @@
     >
     <stroke
         android:color="#651FFF"
-        android:width="4dp"/>
+        android:width="1dp"/>
+    <corners
+        android:radius="5dp"
+        />
 </shape>
