--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,16 @@
     android:layout_height="match_parent"
     android:background="#E6C395"
     tools:context=".MainActivity">
-
+    <View
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_margin="20dp"
+        android:background="@drawable/its_border"
+        />
 
     <TextView
         android:id="@+id/textView"
@@ -71,6 +80,7 @@
         android:gravity="center"
         android:paddingStart="40dp"
         android:paddingEnd="40dp"
+        android:backgroundTint="@android:color/holo_green_light"
         android:shadowColor="@color/gray"
         android:text="Service CheckList"
         android:textAlignment="center"
