--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.ALLSCREENSIZES" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.ALLSCREENSIZES" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">#FF9100</item>
         <item name="colorPrimaryVariant">#3D5AFE</item>
